--- a/homeassistant/components/analytics/manifest.json
+++ b/homeassistant/components/analytics/manifest.json
@@ -3,5 +3,6 @@
   "name": "Analytics",
   "documentation": "https://www.home-assistant.io/integrations/analytics",
   "codeowners": ["@home-assistant/core"],
+  "dependencies": ["api", "websocket_api"],
   "quality_scale": "internal"
 }
