Rename to trigger entity and finish

--- a/homeassistant/components/trigger_entity/manifest.json
+++ b/homeassistant/components/trigger_entity/manifest.json
@@ -1,5 +1,5 @@
 {
-  "domain": "trigger",
+  "domain": "trigger_entity",
   "name": "Trigger based Entities",
   "documentation": "https://www.home-assistant.io/integrations/trigger",
   "codeowners": ["@home-assistant/core"]
