Update manifest name

--- a/homeassistant/components/trigger_entity/manifest.json
+++ b/homeassistant/components/trigger_entity/manifest.json
@@ -1,6 +1,6 @@
 {
   "domain": "trigger_entity",
-  "name": "Trigger based Entities",
+  "name": "Trigger Entities",
   "documentation": "https://www.home-assistant.io/integrations/trigger",
   "codeowners": ["@home-assistant/core"]
 }
